registry/dockerRegistry/docker-registry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
        volumeMounts:
          - mountPath: /var/lib/registry
            name: registry-data
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: registry
spec:
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: registry
  name: registry
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "selfsigned"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - registry.home.lab
    secretName: selfsigned-cert-tls
  rules:
  - host: registry.home.lab
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
