registry/dockerRegistry/docker-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerui
  namespace: rack01
  labels:
    app: dockerui
spec:
  selector:
    matchLabels:
      app: dockerui
  replicas: 1
  template:
    metadata:
      labels:
        app: dockerui
    spec:
      containers:
      - name: dockerui
        image: konradkleine/docker-registry-frontend:v2
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: dockerui
  namespace: rack01
  labels:
    app: dockerui
spec:
  selector:
    app: dockerui
  ports:
    - name: tcp80
      protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: dockerui
  name: dockerui
  namespace: rack01
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "selfsigned"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - registryui.home.lab
    secretName: uiselfsigned-cert-tls
  rules:
  - host: registryui.home.lab
    http:
      paths:
      - backend:
          serviceName: dockerui
          servicePort: 8080
