registry/dockerRegistry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: docker-registry
    k8s-app: docker-registry
  name: docker-registry
  namespace: rack01
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - registry.home.lab
  rules:
  - host: registry.home.lab
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
